src/main/java/org/example/MyWitcher/pattern/creational/abstractfactory/ex1/bad/PhpDeveloper.java
package org.example.MyWitcher.pattern.creational.abstractfactory.ex1.bad;

public class PhpDeveloper {
    public void writeCode() {
        System.out.println("PhpDeveloper");
    }
}
